# tauri-plugin-sunmi

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  rollup.config.js
android/: build.gradle.kts  local.properties
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: Example.kt  ExamplePlugin.kt
android/src/main/java/com/plugin/sunmi/: SunmiPrinterMethod.java
android/src/test/java/: ExampleUnitTest.kt
dist-js/: index.cjs  index.d.ts  index.js
dist-js/models/: column_maker.d.ts  enums.d.ts  index.d.ts  sunmi_style.d.ts
examples/tauri-app/: index.html  package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte  style.css
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
guest-js/models/: column_maker.ts  enums.ts  index.ts  sunmi_style.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: print.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
